2009-11-11  Martin Maechler  <maechler@stat.math.ethz.ch>

	* tests/glmrob-1.R: add moe explicit glmrob() tests;
	including the simple puzzling 1-outlier problem.

	* R/glmrobMqle.R: do use getRversion() !

2009-06-27  Martin Maechler  <maechler@stat.math.ethz.ch>

	* data/wagnerGrowth.rda: add the "wagner data" (continuous + categorical)
	* man/wagnerGrowth.Rd: ditto

2009-06-05  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/glmrob.R (glmrob): add the option  start = "lmrobMM", using
	a *robust* start for {essentially} glm().
	* man/glmrob.Rd: add an example for that   <<<<<______________ FIXME

2009-06-04  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.5-0; *not* released

	* tests/glmrob-1.R: more glmrob() examples

2009-06-03  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/glmrobMqle.R (mFormat): make 'trace=TRUE' also depend on
	getOption("digits").

	* R/glmrobMqle.R, R/glmrob.R: changes from Andreas Ruckstuhl,
	to support family = "Gamma".
	Unfortunately, these at first also very slightly change binomial,
	poisson. ==> few small changes by MM.

	* R/glmrob.R (glmrob): allow y (in "y ~ ...") to be *factor*

2009-01-17  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.4-5 : bug-fixing release

	* tests/tmcd.R: add a regression test for the bug

	* src/rffastmcd.f: rfrdraw() w/o 'seed'
	* src/rfltsreg.f: ditto

2009-01-10  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/rf-common.f (rfrangen): drop unused 'seed' argument
	(rfrdraw): ditto

	* src/rffastmcd.f: get rid of TABs (gfortran -Wall  complains)

	* man/exAM.Rd, man/possumDiv.Rd, ...: Rd_parse fixes

2008-11-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/OGK.R (covOGK): also return n.iter and weight.fn.
	* man/covOGK.Rd: note about the "silly" weight.fn

2008-10-15  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/lmrob.MM.R (lmrob.S): fix error message s/larger/smaller/
	thanks to Keith Ponting.
